# CAA

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
docs/: README.md  scope-1-dependencies.md  scope-10-app-entry.md  scope-11-fix-event-loop.md  scope-12-fix-geometry-format.md  scope-13-normalize-properties.md  scope-2-settings.md  scope-3-database.md  scope-4-services.md  scope-5-api.md  scope-6-scheduler.md  scope-7-app-entry.md  scope-7-refresh-api.md  scope-8-dev-environment.md  scope-9-app-entry.md  scope-9-refresh-background.md
src/caa_nfz/: app.py  config.py  converter.py  crawler.py  database.py  models.py  normalizer.py  routes.py  scheduler.py  services.py  settings.py
