[project]
name = "caa-nfz-crawler"
version = "0.1.0"
description = "CAA No-Fly Zone data crawler"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "geoalchemy2>=0.17",
    "pydantic-settings>=2.7",
    "apscheduler>=3.10,<4",
]

[project.scripts]
caa-nfz = "caa_nfz.crawler:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
lint = [
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
